# research-docs

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  index.html  llms.txt  mcp-internal-presentation.marp.md  mcp-slide-research.md  package-lock.json  package.json  research-tasks.md
.github/workflows/: pages.yml
.scaffdog/: research-topic.md
contents/research/: mcp-late-slide-diagrams.md  mcp-slide-research.md
contents/slides/: mcp-internal-presentation.md
contents/sources/: mcp-source-links.md
contents/themes/: mcp-internal-presentation.md  research.css
demo/: README.md
demo/tests/: test_mcp_server.py
demo/weather-mcp/: README.md  mcp-inspector.config.json  mise.toml  pyproject.toml
demo/weather-mcp/src/weather_mcp_demo/: __init__.py
demo/weather-mcp/tests/: test_weather_service.py
docs/: slide-style-guide.md  slide-workflow.md
docs/slide-examples/: research-layouts.md
pr-preview/pr-1/: index.html  mcp-internal-presentation.marp.md
pr-preview/pr-11/: index.html  llms.txt
pr-preview/pr-12/: index.html  llms.txt
pr-preview/pr-13/: index.html  llms.txt
pr-preview/pr-14/: index.html  llms.txt
pr-preview/pr-15/: index.html  llms.txt
pr-preview/pr-16/: index.html  llms.txt
pr-preview/pr-17/: index.html  llms.txt
research/: mcp-slide-research.md
scripts/: build-pages-site.sh  patch-marp-deck.mjs  screenshot-slides.mjs  verify-slides.sh
slides/: example.md  mcp-internal-presentation.md
src/: content.config.ts
test/: docs.test.ts
theme/: research.css
themes/: mcp-modern.css
topics/: mcp-internal-presentation.md
(+324 files in other folders)
