[project]
name = "weather-mcp-app-demo"
version = "0.1.0"
description = "FastMCP Apps demo for choosing locations and viewing Open-Meteo forecasts."
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.2.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "weather_mcp_demo"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
